# midi-drum-generation

./: .gitignore  README.md  main.py  pyproject.toml
configs/: default.yaml  midi_rnn.yaml  midi_rnn_best.yaml
src/maze/: __init__.py  cli.py  dataset.py  maze.py
src/maze/rnn/: app.py  callbacks.py  helpers.py  lightning_model.py  model.py  train.py
src/midi/: cli.py  soundfonts.py  synth.py
src/midi/callbacks/: generate_wav_callback.py
src/midi/rnn/: app.py  callbacks.py  dataset.py  lightning_model.py  model.py  train.py
tests/: test_groove_dataset.py  test_maze.py  test_midi_rnn.py  test_rnn.py
