[project]
name = "midi-drum-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.6.5",
    "matplotlib>=3.9",
    "optuna>=4.9.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "tensorboard>=2.21.0",
    "torch>=2.12.1",
    "typer>=0.26.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
