[project]
name = "midi-drum-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.6.1",
    "lightning>=2.6.5",
    "matplotlib>=3.9",
    "miditok>=3.0.6.post1",
    "optuna>=4.9.0",
    "pydantic>=2",
    # symusic backs the in-memory MIDI representation (symusic.Score) used by Midi.
    "symusic>=0.5.9",
    "tensorboard>=2.21.0",
    "typer>=0.26.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: tests that render audio (deselect with '-m \"not slow\"')",
]
